<resources>
    <string name="app_name">Image Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="filter_title">Advance Filters</string>
    <string name="image_size">Image Size</string>
    <string name="color">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site">Site Filter</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>

    <string-array name="size_array">
        <item>Any</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra large</item>
    </string-array>
    <string-array name="type_array">
        <item>Any</item>
        <item>Face</item>
        <item>Photo</item>
        <item>Clipart</item>
        <item>Lineart</item>
    </string-array>
    <string-array name="color_array">
        <item>Any</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Teal</item>
        <item>White</item>
        <item>Yellow</item>
    </string-array>
</resources>
